--- a/src/index.css
+++ b/src/index.css
@@ -9,23 +9,39 @@ body {
 }
 
 .weather-container {
-  max-width: 1024px;
-  max-height: 768px;
-  min-width: 640px;
-  max-height: 480px;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  pointer-events: none;
 }
 
 .weather-img {
   position: fixed;
-  min-height: 100%;
-  min-width: 100%;
-  background-size: cover;
-  transition: background-image 0.4s ease-out;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  transition: background-image 1s ease-out;
   z-index: -1;
+}
+
+.weather-img-upper-right {
+  background-position: top right;
+  background-position-y: 80px;
+  background-size: max(min(35vw, 300px), 200px);
+
+  /* set size & center */
+  width: 90%;
+  max-width: 900px;
+  min-width: 350px;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
 }
 
 .background {
   background-image: url("./assets/weather/background_day.png");
+  background-size: min(200vw, 200vh);
+  background-repeat: repeat;
 }
 
 .background.night {
@@ -35,6 +51,8 @@ body {
 .ground {
   background-image: url("./assets/weather/ground_green.png");
   background-position: bottom;
+  background-repeat: repeat-x;
+  background-size: 100vh;
 }
 .ground.snowy {
   background-image: url("./assets/weather/ground_snowy.png");
@@ -42,8 +60,6 @@ body {
 
 .sun {
   background-image: url("./assets/weather/sun.png");
-  background-position: top right;
-  background-position-y: 35px;
 }
 
 .sun.moon {
@@ -52,7 +68,18 @@ body {
 
 .trees {
   background-image: url("./assets/weather/trees_green.png");
-  background-position: bottom left;
+  background-position-y: bottom 7vh;
+  background-position-x: left;
+  background-size: max(min(50vw, 400px), 200px);
+  background-origin: content-box;
+
+  /* set size & center */
+  width: 90%;
+  max-width: 900px;
+  min-width: 350px;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
 }
 
 .trees.snowy {
@@ -61,14 +88,10 @@ body {
 
 .clouds {
   background-image: url("./assets/weather/cloud.png");
-  background-position: top right;
-  background-position-y: 35px;
 }
 
 .rain {
   background-image: url("./assets/weather/rain.png");
-  background-position: top right;
-  background-position-y: 35px;
 }
 
 main {
@@ -81,7 +104,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 75vh;
+  height: 80vh;
 }
 
 .search-box {
@@ -90,8 +113,9 @@ main {
 
 .search-bar {
   display: block;
-  width: 50%;
+  width: 60%;
   max-width: 400px;
+  min-width: 200px;
   padding: 15px;
   margin: auto;
 
