--- a/src/index.css
+++ b/src/index.css
@@ -13,15 +13,19 @@ body {
   width: 100vw;
   height: 100vh;
   pointer-events: none;
+
+  z-index: -1;
 }
 
 .weather-img {
   position: fixed;
   width: 100%;
   height: 100%;
+
+  background-image: none;
   background-repeat: no-repeat;
-  transition: background-image 1s ease-out;
-  z-index: -1;
+
+  transition: background-image 1s;
 }
 
 .weather-img-upper-right {
@@ -42,6 +46,10 @@ body {
   background-image: url("./assets/weather/background_day.png");
   background-size: min(200vw, 200vh);
   background-repeat: repeat;
+}
+
+.background.cloudy {
+  background-image: url("./assets/weather/background_cloudy.png");
 }
 
 .background.night {
@@ -68,10 +76,10 @@ body {
 
 .trees {
   background-image: url("./assets/weather/trees_green.png");
+  background-position: bottom left;
   background-position-y: bottom 7vh;
   background-position-x: left;
   background-size: max(min(50vw, 400px), 200px);
-  background-origin: content-box;
 
   /* set size & center */
   width: 90%;
@@ -98,6 +106,9 @@ main {
   min-height: 100vh;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, .01), rgba(0, 0, 0, 0.2));
   padding: 15px;
+  color: white;
+
+  z-index: 2;
 }
 
 .info-container {
@@ -160,12 +171,5 @@ main {
 
 .weather {
   font-size: 18px;
-}
-
-.font-light {
-  color: white;
-}
-
-.font-dark { 
-  color: black;
+  font-weight: bold;
 }
